# lio-sam-ros2-pc

./: CMakeLists.txt  注释
config/: params.yaml  rviz2.rviz
include/lio_sam/: utility.hpp
launch/: run.launch.py
src/: RoboLocParm.json  imageProjection.cpp  imuPreintegration.cpp  mapOptmization.cpp
src/Diagnosis/: CMakeLists.txt
src/Diagnosis/include/: LCMTask.h
src/Diagnosis/src/: LCMTask.cpp
src/Geometry/: CMakeLists.txt
src/Geometry/include/: DataRange.h
src/NavBase/: CMakeLists.txt
src/NavBase/LaserSensor/src/: BlueSeaLaser50c.cpp  BlueSeaLaserE320.cpp  SensorFamily.cpp
src/NavBase/Mapping/include/: LaserAutoMapping.h  LaserMapping.h
src/NavBase/Mapping/src/: BaseOdometry.cpp  LaserAutoMapping.cpp  LaserMapping.cpp
src/NavBase/Protocol/include/: HttpCommunicationGlobalData.h  RoboLocProto.h
src/NavBase/Protocol/src/: AutoOutPutBlackBox.cpp  ParameterObject.cpp  RoboLocClnt.cpp
src/Scan/: CMakeLists.txt
src/Scan/include/: Scan.h  ScannerParam.h
src/Scan/src/: Scan.cpp  ScannerParam.cpp
src/SoftPls/: CMakeLists.txt
src/SoftPls/src/: AvoidObstacle.cpp
src/Tools/: CMakeLists.txt
src/Tools/include/: LinuxSetting.h  Project.h
